# jiten-parser-py

./: .gitignore  README.md  pyproject.toml
src/jiten/: !commit.txt  amount_combinations.py  deconjugation_form.py  deconjugation_rule.py  deconjugation_virtual_rule.py  deconjugator.py  json_helpers.py  morphological_analyser.py  parser.py  part_of_speech.py  sentence_info.py  setup_deps.py  string_helpers.py  sudachi_interop.py  word_info.py
src/jiten/app/: cli.py  gui.py
src/jiten/jmdict/: jmdict.py  jmdict_definition.py  jmdict_furigana.py  jmdict_lookup.py  jmdict_reading_type.py  jmdict_word.py  word_origin.py
src/jiten/resources/: char.def  deconjugator.json  sudachi.json  sudachi_nouserdic.json
tests/: test_morphological_analyser.py
